# mtacoin3

./: CMakeLists.txt  CommonFile.conf  README.md
Miner/: CMakeLists.txt  Dockerfile  newMiner.cpp
Server/: Dockerfile  SharedFile.cpp  SharedFile.h  newServer.cpp
SharedLibrary/: CMakeLists.txt  SharedFile.h
